# cargo-crusader

./: .gitignore  Cargo.toml  README.md
src/: main.rs
test-crates/crusadertest1/: Cargo.toml
test-crates/crusadertest1/src/: lib.rs
test-crates/crusadertest2/: Cargo.toml
test-crates/crusadertest2/src/: lib.rs
