[package]
name = "cargo-crusader"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]
description = "Test the downstream impact of crate changes before publishing"
license = "MIT/Apache-2.0"
repository = "https://github.com/brson/cargo-crusader"

[dependencies]
semver = "0.1.20"
toml = "0.1.21"
log = "0.3.1"
env_logger = "0.3.1"
curl = "0.2.10"
rustc-serialize = "0.3.16"
threadpool = "0.1.4"
num_cpus = "0.2.6"
tempdir = "0.3.4"
lazy_static = "0.1.14"
term = "0.2.11"
